cabal-version:      3.0
name:               ppad-ripemd160
version:            0.1.2
synopsis:           The RIPEMD-160 hashing algorithm.
license:            MIT
license-file:       LICENSE
author:             Jared Tobin
maintainer:         jared@ppad.tech
category:           Cryptography
build-type:         Simple
tested-with:        GHC == 9.8.1
extra-doc-files:    CHANGELOG
description:
  A pure implementation of RIPEMD-160 and HMAC-RIPEMD160 on strict and
  lazy ByteStrings.

source-repository head
  type:     git
  location: git.ppad.tech/ripemd160.git

library
  default-language: Haskell2010
  hs-source-dirs:   lib
  ghc-options:
      -Wall
  exposed-modules:
      Crypto.Hash.RIPEMD160
  build-depends:
      base >= 4.9 && < 5
    , bytestring >= 0.9 && < 0.13

test-suite ripemd160-tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Main.hs

  ghc-options:
    -rtsopts -Wall -O2

  build-depends:
      aeson
    , base
    , base16-bytestring
    , bytestring
    , ppad-ripemd160
    , tasty
    , tasty-hunit
    , text

benchmark ripemd160-bench
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      bench
  main-is:             Main.hs

  ghc-options:
    -rtsopts -O2 -Wall

  build-depends:
      base
    , bytestring
    , criterion
    , ppad-ripemd160
    , SHA

